--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Vue practises</title>
 </head>
 <body>
-  <div id="app">{{ message }}</div>
+  <div id="app"></div>
 
 </body>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
