Styles is a Vuex state

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div id="app"></div>
 
 </body>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js" integrity="sha256-chlNFSVx3TdcQ2Xlw7SvnbLAavAQLO0Y/LBiWX04viY=" crossorigin="anonymous"></script>
-<script src="/js/index.js" type="module"></script>
+  <script src="//cdn.jsdelivr.net/combine/npm/vue@2.6.11,npm/vuex@3.1.2"></script>
+  <script src="/js/index.js" type="module"></script>
 </html>
