--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <div id="app"></div>
 
 </body>
-  <script src="//cdn.jsdelivr.net/combine/npm/vue@2.6.11,npm/vuex@3.1.2"></script>
+  <script src="https://cdn.jsdelivr.net/combine/npm/vue@2.6.11,npm/vuex@3.1.2,npm/lodash@4.17.15,npm/vuex-persist@2.2.0"></script>
   <script src="/js/index.js" type="module"></script>
 </html>
