--- a/index-dev.html
+++ b/index-dev.html
@@ -18,7 +18,6 @@
   <div id="app"></div>
 
 </body>
-
-  <script src="https://cdn.jsdelivr.net/combine/npm/vue@2,npm/vuex@3,npm/vue-router@3,npm/lodash@4,npm/vuex-persist@2,npm/vuetify@2"></script>
+  <script src="https://cdn.jsdelivr.net/combine/npm/lodash@4.17.15,npm/vue@2.6.11/dist/vue.js,npm/vuex@3.1.2/dist/vuex.js,npm/vue-router@3.1.3,npm/vuex-persist@2.2.0,npm/vuetify@2.1.15"></script>
   <script src="/js/index.js" type="module"></script>
 </html>
