--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
 </body>
 
   <script src="https://cdn.jsdelivr.net/combine/npm/vue@2,npm/vuex@3,npm/vue-router@3,npm/lodash@4,npm/vuex-persist@2,npm/vuetify@2"></script>
-  <script src="/js/index.js" type="module"></script>
+  <script src="js/index.js" type="module"></script>
 </html>
