--- a/index-dev.html
+++ b/index-dev.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Vue practises</title>
+  <title>Vue practises - tests generator</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
   <!-- VUETIFY -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
@@ -16,7 +17,6 @@
 </head>
 <body>
   <div id="app"></div>
-
 </body>
   <script src="https://cdn.jsdelivr.net/combine/npm/lodash@4.17.15,npm/vue@2.6.11/dist/vue.js,npm/vuex@3.1.2/dist/vuex.js,npm/vue-router@3.1.3,npm/vuex-persist@2.2.0,npm/vuetify@2.1.15"></script>
   <script src="js/index.js" type="module"></script>
